# wasm-text-sphere

./: .gitignore  COPYRIGHT  Cargo.toml  README.md  build-gh-pages.sh
docs/: ai_agent_instructions.md  architecture.md  index.html  plan.md  status.md  style.css
docs/pkg/: README.md  package.json  wasm_text_sphere.d.ts  wasm_text_sphere.js  wasm_text_sphere_bg.wasm  wasm_text_sphere_bg.wasm.d.ts
documentation/: design.md  prd.md  status.md
src/: lib.rs
